<resources>
    <string name="app_name">Cal Facts</string>
    <string name="tv_details2">Which of these are associated with california?</string>
    <string name="flower">Poppy Flowers</string>
    <string name="animal">Brown Bears</string>
    <string name="plant">Redwood Forest</string>
    <string name="food">Cantaloupe Fruit</string>
    <string name="tv_details1">Which are cities in California?</string>
    <string name="city1">San Francisco</string>
    <string name="city2">Los Angeles</string>
    <string name="city3">Sacramento</string>
    <string name="city4">Juno</string>
    <string name="describe">Describe California in 3 adjectives!</string>
</resources>
